[package]
name = "raste"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tower-http = "0.3.4"
