[package]
name = "pastebnn"
version = "0.1.0"
edition = "2021"
authors = ["Evan Slack <evan.slack@outlook.com>"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
hyper = "0.14.20"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.3.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
axum-macros = "0.2.3"
async-trait = "0.1.57"
clap = { version = "3.1", features = ["derive", "env"] }
